CORE-17780: HM PLP Filter Scrollbar issue.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_products-list-filters.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_products-list-filters.scss
@@ -152,6 +152,7 @@ html {
 
     &__inner {
       padding-bottom: 9.375rem;
+      overflow-y: auto;
 
       .block-views-exposed-filter-blockalshaya-product-list-block-1,
       .block-views-exposed-filter-blockalshaya-product-list-block-2,
